Fixed issue with Toggles on Firefox

--- a/src/App.scss
+++ b/src/App.scss
@@ -607,6 +607,7 @@ input:disabled {
 		opacity: 0;
 		position: fixed;
 		width: 0;
+		pointer-events: none;
 	}
 
 	border: 2px solid #6c6046;
